K8S/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: my_ns
  name: flask-deployment
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: flask-app
        image: 140744541048.dkr.ecr.us-east-1.amazonaws.com/myreg:myapp
        ports:
        - containerPort: 5002
