K8S/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: myns
spec:
  selector:
    app: app
  type: NodePort
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 5002
      targetPort: 5002
      nodePort: 30030
