K8S/services.yml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: my_ns
spec:
  selector:
    app: mysql
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  namespace: my_ns
  name: app-service
spec:
  selector:
    app: app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5002
